first 3 screens fully adaptive

--- a/assets/fonts/stylesheet.css
+++ b/assets/fonts/stylesheet.css
@@ -1,190 +1,190 @@
 @font-face {
     font-family: 'NotoSansBold';
-    src: url('/assets/fonts/NotoSans/NotoSansBold/NotoSansBold.eot');
-    src: local('/assets/fonts/NotoSans/NotoSansBold/NotoSansBold'),
-        url('/assets/fonts/NotoSans/NotoSansBold/NotoSansBold.eot?#iefix') format('embedded-opentype'),
-        url('/assets/fonts/NotoSans/NotoSansBold/NotoSansBold.woff') format('woff'),
-        url('/assets/fonts/NotoSans/NotoSansBold/NotoSansBold.ttf') format('truetype');
+    src: url('./NotoSans/NotoSansBold/NotoSansBold.eot');
+    src: local('./NotoSans/NotoSansBold/NotoSansBold'),
+        url('./NotoSans/NotoSansBold/NotoSansBold.eot?#iefix') format('embedded-opentype'),
+        url('./NotoSans/NotoSansBold/NotoSansBold.woff') format('woff'),
+        url('./NotoSans/NotoSansBold/NotoSansBold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi Condensed';
-    src: url('/rf-dewi/RFDewiCondensed-Regular.eot');
-    src: local('/rf-dewi/RF Dewi Condensed Regular'), local('/rf-dewi/RFDewiCondensed-Regular'),
-        url('/rf-dewi/RFDewiCondensed-Regular.eot?#iefix') format('embedded-opentype'),
-        url('/rf-dewi/RFDewiCondensed-Regular.woff2') format('woff2'),
-        url('/rf-dewi/RFDewiCondensed-Regular.woff') format('woff'),
-        url('/rf-dewi/RFDewiCondensed-Regular.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiCondensed-Regular.eot');
+    src: local('./rf-dewi/RF Dewi Condensed Regular'), local('./rf-dewi/RFDewiCondensed-Regular'),
+        url('./rf-dewi/RFDewiCondensed-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiCondensed-Regular.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiCondensed-Regular.woff') format('woff'),
+        url('./rf-dewi/RFDewiCondensed-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi Expanded';
-    src: url('/assets/fonts/rf-dewi/RFDewiExpanded-Black.eot');
-    src: local('/assets/fonts/rf-dewi/RF Dewi Expanded Black'), local('/rf-dewi/RFDewiExpanded-Black'),
-        url('/assets/fonts/rf-dewi/RFDewiExpanded-Black.eot?#iefix') format('embedded-opentype'),
-        url('/assets/fonts/rf-dewi/RFDewiExpanded-Black.woff2') format('woff2'),
-        url('/assets/fonts/rf-dewi/RFDewiExpanded-Black.woff') format('woff'),
-        url('/assets/fonts/rf-dewi/RFDewiExpanded-Black.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiExpanded-Black.eot');
+    src: local('./rf-dewi/RF Dewi Expanded Black'), local('./rf-dewi/RFDewiExpanded-Black'),
+        url('./rf-dewi/RFDewiExpanded-Black.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiExpanded-Black.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiExpanded-Black.woff') format('woff'),
+        url('./rf-dewi/RFDewiExpanded-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi';
-    src: url('RFDewi-Ultralight.eot');
-    src: local('RF Dewi Ultralight'), local('RFDewi-Ultralight'),
-        url('RFDewi-Ultralight.eot?#iefix') format('embedded-opentype'),
-        url('RFDewi-Ultralight.woff2') format('woff2'),
-        url('RFDewi-Ultralight.woff') format('woff'),
-        url('RFDewi-Ultralight.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewi-Ultralight.eot');
+    src: local('./rf-dewi/RF Dewi Ultralight'), local('./rf-dewi/RFDewi-Ultralight'),
+        url('./rf-dewi/RFDewi-Ultralight.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewi-Ultralight.woff2') format('woff2'),
+        url('./rf-dewi/RFDewi-Ultralight.woff') format('woff'),
+        url('./rf-dewi/RFDewi-Ultralight.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi';
-    src: url('RFDewi-Ultrabold.eot');
-    src: local('RF Dewi Ultrabold'), local('RFDewi-Ultrabold'),
-        url('RFDewi-Ultrabold.eot?#iefix') format('embedded-opentype'),
-        url('RFDewi-Ultrabold.woff2') format('woff2'),
-        url('RFDewi-Ultrabold.woff') format('woff'),
-        url('RFDewi-Ultrabold.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewi-Ultrabold.eot');
+    src: local('./rf-dewi/RF Dewi Ultrabold'), local('RFDewi-Ultrabold'),
+        url('./rf-dewi/RFDewi-Ultrabold.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewi-Ultrabold.woff2') format('woff2'),
+        url('./rf-dewi/RFDewi-Ultrabold.woff') format('woff'),
+        url('./rf-dewi/RFDewi-Ultrabold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi';
-    src: url('RFDewi-Black.eot');
-    src: local('RF Dewi Black'), local('RFDewi-Black'),
-        url('RFDewi-Black.eot?#iefix') format('embedded-opentype'),
-        url('RFDewi-Black.woff2') format('woff2'),
-        url('RFDewi-Black.woff') format('woff'),
-        url('RFDewi-Black.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewi-Black.eot');
+    src: local('./rf-dewi/RF Dewi Black'), local('RFDewi-Black'),
+        url('./rf-dewi/RFDewi-Black.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewi-Black.woff2') format('woff2'),
+        url('./rf-dewi/RFDewi-Black.woff') format('woff'),
+        url('./rf-dewi/RFDewi-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi Condensed';
-    src: url('RFDewiCondensed-Ultrabold.eot');
-    src: local('RF Dewi Condensed Ultrabold'), local('RFDewiCondensed-Ultrabold'),
-        url('RFDewiCondensed-Ultrabold.eot?#iefix') format('embedded-opentype'),
-        url('RFDewiCondensed-Ultrabold.woff2') format('woff2'),
-        url('RFDewiCondensed-Ultrabold.woff') format('woff'),
-        url('RFDewiCondensed-Ultrabold.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiCondensed-Ultrabold.eot');
+    src: local('./rf-dewi/RF Dewi Condensed Ultrabold'), local('./rf-dewi/RFDewiCondensed-Ultrabold'),
+        url('./rf-dewi/RFDewiCondensed-Ultrabold.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiCondensed-Ultrabold.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiCondensed-Ultrabold.woff') format('woff'),
+        url('./rf-dewi/RFDewiCondensed-Ultrabold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi Expanded';
-    src: url('RFDewiExpanded-Ultrabold.eot');
-    src: local('RF Dewi Expanded Ultrabold'), local('RFDewiExpanded-Ultrabold'),
-        url('RFDewiExpanded-Ultrabold.eot?#iefix') format('embedded-opentype'),
-        url('RFDewiExpanded-Ultrabold.woff2') format('woff2'),
-        url('RFDewiExpanded-Ultrabold.woff') format('woff'),
-        url('RFDewiExpanded-Ultrabold.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiExpanded-Ultrabold.eot');
+    src: local('./rf-dewi/RF Dewi Expanded Ultrabold'), local('./rf-dewi/RFDewiExpanded-Ultrabold'),
+        url('./rf-dewi/RFDewiExpanded-Ultrabold.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiExpanded-Ultrabold.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiExpanded-Ultrabold.woff') format('woff'),
+        url('./rf-dewi/RFDewiExpanded-Ultrabold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi';
-    src: url('RFDewi-LightItalic.eot');
-    src: local('RF Dewi Light Italic'), local('RFDewi-LightItalic'),
-        url('RFDewi-LightItalic.eot?#iefix') format('embedded-opentype'),
-        url('RFDewi-LightItalic.woff2') format('woff2'),
-        url('RFDewi-LightItalic.woff') format('woff'),
-        url('RFDewi-LightItalic.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewi-LightItalic.eot');
+    src: local('./rf-dewi/RF Dewi Light Italic'), local('./assets/fonts/rf-dewi/RFDewi-LightItalic'),
+        url('./rf-dewi/RFDewi-LightItalic.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewi-LightItalic.woff2') format('woff2'),
+        url('./rf-dewi/RFDewi-LightItalic.woff') format('woff'),
+        url('./rf-dewi/RFDewi-LightItalic.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'RF Dewi';
-    src: url('RFDewi-Regular.eot');
-    src: local('RF Dewi Regular'), local('RFDewi-Regular'),
-        url('RFDewi-Regular.eot?#iefix') format('embedded-opentype'),
-        url('RFDewi-Regular.woff2') format('woff2'),
-        url('RFDewi-Regular.woff') format('woff'),
-        url('RFDewi-Regular.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewi-Regular.eot');
+    src: local('./rf-dewi/RF Dewi Regular'), local('RFDewi-Regular'),
+        url('./rf-dewi/RFDewi-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewi-Regular.woff2') format('woff2'),
+        url('./rf-dewi/RFDewi-Regular.woff') format('woff'),
+        url('./rf-dewi/RFDewi-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi Extended';
-    src: url('RFDewiExtended-Bold.eot');
-    src: local('RF Dewi Extended Bold'), local('RFDewiExtended-Bold'),
-        url('RFDewiExtended-Bold.eot?#iefix') format('embedded-opentype'),
-        url('RFDewiExtended-Bold.woff2') format('woff2'),
-        url('RFDewiExtended-Bold.woff') format('woff'),
-        url('RFDewiExtended-Bold.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiExtended-Bold.eot');
+    src: local('./rf-dewi/RF Dewi Extended Bold'), local('./rf-dewi/RFDewiExtended-Bold'),
+        url('./rf-dewi/RFDewiExtended-Bold.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiExtended-Bold.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiExtended-Bold.woff') format('woff'),
+        url('./rf-dewi/RFDewiExtended-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi';
-    src: url('RFDewi-Semibold.eot');
-    src: local('RF Dewi Semibold'), local('RFDewi-Semibold'),
-        url('RFDewi-Semibold.eot?#iefix') format('embedded-opentype'),
-        url('RFDewi-Semibold.woff2') format('woff2'),
-        url('RFDewi-Semibold.woff') format('woff'),
-        url('RFDewi-Semibold.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewi-Semibold.eot');
+    src: local('./rf-dewi/RF Dewi Semibold'), local('./rf-dewi/RFDewi-Semibold'),
+        url('./rf-dewi/RFDewi-Semibold.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewi-Semibold.woff2') format('woff2'),
+        url('./rf-dewi/RFDewi-Semibold.woff') format('woff'),
+        url('./rf-dewi/RFDewi-Semibold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi Expanded';
-    src: url('RFDewiExpanded-BlackItalic.eot');
-    src: local('RF Dewi Expanded Black Italic'), local('RFDewiExpanded-BlackItalic'),
-        url('RFDewiExpanded-BlackItalic.eot?#iefix') format('embedded-opentype'),
-        url('RFDewiExpanded-BlackItalic.woff2') format('woff2'),
-        url('RFDewiExpanded-BlackItalic.woff') format('woff'),
-        url('RFDewiExpanded-BlackItalic.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiExpanded-BlackItalic.eot');
+    src: local('./rf-dewi/RF Dewi Expanded Black Italic'), local('./rf-dewi/RFDewiExpanded-BlackItalic'),
+        url('./rf-dewi/RFDewiExpanded-BlackItalic.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiExpanded-BlackItalic.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiExpanded-BlackItalic.woff') format('woff'),
+        url('./rf-dewi/RFDewiExpanded-BlackItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'RF Dewi Condensed';
-    src: url('RFDewiCondensed-ThinItalic.eot');
-    src: local('RF Dewi Condensed Thin Italic'), local('RFDewiCondensed-ThinItalic'),
-        url('RFDewiCondensed-ThinItalic.eot?#iefix') format('embedded-opentype'),
-        url('RFDewiCondensed-ThinItalic.woff2') format('woff2'),
-        url('RFDewiCondensed-ThinItalic.woff') format('woff'),
-        url('RFDewiCondensed-ThinItalic.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiCondensed-ThinItalic.eot');
+    src: local('./rf-dewi/RF Dewi Condensed Thin Italic'), local('./rf-dewi/RFDewiCondensed-ThinItalic'),
+        url('./rf-dewi/RFDewiCondensed-ThinItalic.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiCondensed-ThinItalic.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiCondensed-ThinItalic.woff') format('woff'),
+        url('./rf-dewi/RFDewiCondensed-ThinItalic.ttf') format('truetype');
     font-weight: 100;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'RF Dewi Extended';
-    src: url('RFDewiExtended-Light.eot');
-    src: local('RF Dewi Extended Light'), local('RFDewiExtended-Light'),
-        url('RFDewiExtended-Light.eot?#iefix') format('embedded-opentype'),
-        url('RFDewiExtended-Light.woff2') format('woff2'),
-        url('RFDewiExtended-Light.woff') format('woff'),
-        url('RFDewiExtended-Light.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiExtended-Light.eot');
+    src: local('./rf-dewi/RF Dewi Extended Light'), local('./rf-dewi/RFDewiExtended-Light'),
+        url('./rf-dewi/RFDewiExtended-Light.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiExtended-Light.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiExtended-Light.woff') format('woff'),
+        url('./rf-dewi/RFDewiExtended-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'RF Dewi Extended';
-    src: url('RFDewiExtended-Black.eot');
-    src: local('RF Dewi Extended Black'), local('RFDewiExtended-Black'),
-        url('RFDewiExtended-Black.eot?#iefix') format('embedded-opentype'),
-        url('RFDewiExtended-Black.woff2') format('woff2'),
-        url('RFDewiExtended-Black.woff') format('woff'),
-        url('RFDewiExtended-Black.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewiExtended-Black.eot');
+    src: local('./rf-dewi/RF Dewi Extended Black'), local('./rf-dewi/RFDewiExtended-Black'),
+        url('./rf-dewi/RFDewiExtended-Black.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewiExtended-Black.woff2') format('woff2'),
+        url('./rf-dewi/RFDewiExtended-Black.woff') format('woff'),
+        url('./rf-dewi/RFDewiExtended-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
 }
@@ -755,24 +755,24 @@
 
 @font-face {
     font-family: 'RF Dewi';
-    src: url('/rf-dewi/RFDewi-BlackItalic.eot');
-    src: local('/rf-dewi/RF Dewi Black Italic'), local('/rf-dewi/RFDewi-BlackItalic'),
-        url('/rf-dewi/RFDewi-BlackItalic.eot?#iefix') format('embedded-opentype'),
-        url('/rf-dewi/RFDewi-BlackItalic.woff2') format('woff2'),
-        url('/rf-dewi/RFDewi-BlackItalic.woff') format('woff'),
-        url('/rf-dewi/RFDewi-BlackItalic.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewi-BlackItalic.eot');
+    src: local('./rf-dewi/RF Dewi Black Italic'), local('/rf-dewi/RFDewi-BlackItalic'),
+        url('./rf-dewi/RFDewi-BlackItalic.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewi-BlackItalic.woff2') format('woff2'),
+        url('./rf-dewi/RFDewi-BlackItalic.woff') format('woff'),
+        url('./rf-dewi/RFDewi-BlackItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'RF Dewi';
-    src: url('/rf-dewi/RFDewi-SemiboldItalic.eot');
-    src: local('/rf-dewi/RF Dewi Semibold Italic'), local('/rf-dewi/RFDewi-SemiboldItalic'),
-        url('/rf-dewi/RFDewi-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
-        url('/rf-dewi/RFDewi-SemiboldItalic.woff2') format('woff2'),
-        url('/rf-dewi/RFDewi-SemiboldItalic.woff') format('woff'),
-        url('/rf-dewi/RFDewi-SemiboldItalic.ttf') format('truetype');
+    src: url('./rf-dewi/RFDewi-SemiboldItalic.eot');
+    src: local('./rf-dewi/RF Dewi Semibold Italic'), local('./rf-dewi/RFDewi-SemiboldItalic'),
+        url('./rf-dewi/RFDewi-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
+        url('./rf-dewi/RFDewi-SemiboldItalic.woff2') format('woff2'),
+        url('./rf-dewi/RFDewi-SemiboldItalic.woff') format('woff'),
+        url('./rf-dewi/RFDewi-SemiboldItalic.ttf') format('truetype');
     font-weight: 600;
     font-style: italic;
 }
